# django-okr-app

./: README.md  manage.py  pyproject.toml
okr/: settings.py  urls.py  wsgi.py
register/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
register/migrations/: 0001_initial.py  0002_auto_20220223_0946.py  0003_auto_20220226_1748.py  0004_auto_20220301_2025.py
register/static/register/: style.css
register/templates/: base.html
register/templates/register/: form.html
